create product model, table, graphql resolvers and fix relationship with category

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -129,13 +129,19 @@ autobind:
 # modelgen, the others will be allowed when binding to fields. Configure them to
 # your liking
 models:
+  Category:
+    model:
+      - github.com/stack-boilerplate/go-graphql-gqlgen/graph/model.Category
+  Product:
+    model:
+      - github.com/stack-boilerplate/go-graphql-gqlgen/graph/model.Product
   ID:
     model:
       - github.com/99designs/gqlgen/graphql.ID
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
-  # gqlgen provides a default GraphQL UUID convenience wrapper for github.com/google/uuid 
+  # gqlgen provides a default GraphQL UUID convenience wrapper for github.com/google/uuid
   # but you can override this to provide your own GraphQL UUID implementation
   UUID:
     model:
